# PlasmaZones

./: .clang-format  .clangd  .cursorrules  .dockerignore  .gitattributes  .gitignore  .worktreeinclude  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  COPYING.LESSER  Dockerfile  Makefile  PKGBUILD  README.md  develop.nix  flake.nix  lefthook.yml  plasmazones-refresh-sycoca  plasmazones.install
cli/phosphorctl/: CMakeLists.txt  client.cpp  client.h  main.cpp  subcommand_call.cpp  subcommand_list.cpp  subcommand_schema.cpp  subcommand_subscribe.cpp  subcommands.h  subcommands_common.cpp
examples/phosphor-bar-canvas-demo/: BarDemoController.h  CMakeLists.txt  Main.qml  SocketPopoutTransport.h  bardemocontroller.cpp  main.cpp  socketpopouttransport.cpp
examples/phosphor-ipc-demo/: CMakeLists.txt  DemoController.h  Main.qml  democontroller.cpp  main.cpp
examples/phosphor-osd-demo/: CMakeLists.txt  Main.qml  OSDController.h  QmlComponentOSDFactory.h  main.cpp  osdcontroller.cpp  qmlcomponentosdfactory.cpp
examples/phosphor-perscreen-demo/: CMakeLists.txt  Main.qml  main.cpp
examples/phosphor-popout-demo/: AlertPopout.qml  CMakeLists.txt  CalendarPopout.qml  DemoController.h  InAppPopoutTransport.h  Main.qml  NotePopout.qml  PhosphorButton.qml  democontroller.cpp  inapppopouttransport.cpp  main.cpp
examples/phosphor-registry-demo/: CMakeLists.txt  ClockWidget.qml  DemoController.h  Main.qml  QmlComponentBarWidgetFactory.h  democontroller.cpp  main.cpp  qmlcomponentbarwidgetfactory.cpp
examples/phosphor-registry-plugin-demo/: CMakeLists.txt  ColorSquareWidget.qml  DemoController.h  Main.qml  QmlComponentBarWidgetFactory.h  democontroller.cpp  main.cpp  qmlcomponentbarwidgetfactory.cpp
examples/phosphor-service-bluetooth-cli/: CMakeLists.txt  main.cpp
examples/phosphor-service-brightness-cli/: CMakeLists.txt  main.cpp
examples/phosphor-service-clipboard-cli/: CMakeLists.txt  main.cpp
examples/phosphor-service-idle-cli/: CMakeLists.txt  main.cpp
examples/phosphor-service-lock-cli/: CMakeLists.txt  main.cpp
examples/phosphor-service-network-cli/: CMakeLists.txt  main.cpp
examples/phosphor-service-notifications-cli/: CMakeLists.txt  main.cpp
examples/phosphor-service-pipewire-cli/: CMakeLists.txt  cli_env.cpp  cli_env.h  cli_io.cpp  cli_io.h  cli_target.cpp  cli_target.h  cli_wait.cpp  cli_wait.h  main.cpp
examples/phosphor-service-polkit-cli/: CMakeLists.txt  main.cpp
examples/phosphor-service-session-cli/: CMakeLists.txt  main.cpp
examples/phosphor-shell/: CMakeLists.txt  CalendarContent.qml  CalendarPopup.qml  CenterPanel.qml  LeftPanel.qml  MenuContent.qml  MenuPopup.qml  MprisContent.qml  MprisPlayerState.qml  MprisPopup.qml  MprisWidget.qml  PanelPopup.qml  PanelPopupHost.qml  RightPanel.qml  SessionLockCoordinator.qml  SettingsWindow.qml  Taskbar.qml  TopPanel.qml  TrayMenuPopup.qml  shell.qml
examples/phosphor-theme-cli/: CMakeLists.txt  main.cpp
kcm/: CMakeLists.txt  assignmentmanager.cpp  assignmentmanager.h  daemoncontroller.cpp  daemoncontroller.h  kcm_plasmazones.cpp  kcm_plasmazones.h  kcm_plasmazones.json  layoutmanager.cpp  layoutmanager.h  plasmazonesmoduledata.cpp  plasmazonesmoduledata.h  settings-windowmanagement-plasmazones.desktop
kcm/about/: CMakeLists.txt  kcm_plasmazones_about.json  kcmabout.cpp  kcmabout.h
kcm/assignments/: CMakeLists.txt  kcm_plasmazones_assignments.json  kcmassignments.cpp  kcmassignments.h
kcm/autotiling/: CMakeLists.txt  kcm_plasmazones_autotiling.json  kcmautotiling.cpp  kcmautotiling.h
kcm/common/: CMakeLists.txt  assignmentmanager.cpp  assignmentmanager.h  assignmentmanager_saveload.cpp  daemoncontroller.cpp  daemoncontroller.h  dbusutils.h  layoutmanager.cpp  layoutmanager.h  perscreenhelpers.h  screenprovider.cpp
kcm/editor/: CMakeLists.txt  kcm_plasmazones_editor.json  kcmeditor.cpp  kcmeditor.h
kcm/exclusions/: CMakeLists.txt  kcm_plasmazones_exclusions.json  kcmexclusions.cpp  kcmexclusions.h
kcm/general/: CMakeLists.txt  kcm_plasmazones_general.json  kcmgeneral.cpp  kcmgeneral.h
kcm/layouts/: CMakeLists.txt  kcm_plasmazones_layouts.json  kcmlayouts.cpp  kcmlayouts.h
kcm/snapping/: CMakeLists.txt  kcm_plasmazones_snapping.json  kcmsnapping.cpp  kcmsnapping.h  kcmsnapping_appearance.cpp  kcmsnapping_zoneselector.cpp
kcm/ui/: AlgorithmPreview.qml  AssignmentRow.qml  ColorButton.qml  EasingPreview.qml  FontPickerDialog.qml  InputCapture.qml  KeySequenceInput.qml  LayoutComboBox.qml  LayoutThumbnail.qml  ModifierAndMouseCheckBoxes.qml  ModifierCheckBoxes.qml  MonitorSelectorSection.qml  PositionPicker.qml  PreviewSizeControl.qml  ScreenComboBox.qml  WideComboBox.qml  main.qml  qmldir
kwin-effect/: CMakeLists.txt  SnapAssistThumb.qrc  autotileborderrenderer.cpp  autotileborderrenderer.h  autotilehandler.cpp  autotilehandler.h  compositorclock.cpp  compositorclock.h  dbus_constants.h  deferredwindowcommits.h  desktoptransitioncapture.cpp  desktoptransitionmanager.cpp  desktoptransitionmanager.h  desktoptransitionshader.cpp  desktoptransitionteardown.cpp  dragtracker.cpp  dragtracker.h  kwin_compositor_bridge.cpp  kwin_compositor_bridge.h  metadata.json  navigationhandler.cpp  navigationhandler.h  plasmazoneseffect.cpp  plasmazoneseffect.h  screenchangehandler.cpp  screenchangehandler.h  scrollhandler.cpp  scrollhandler.h  shadertransitionmanager.cpp  shadertransitionmanager.h  snapassisthandler.cpp  snapassisthandler.h  snapassistthumbnailcapture.cpp  snapassistthumbnailcapture.h  snaphandler.cpp  snaphandler.h  tilinghandlerbase.cpp  tilinghandlerbase.h  windowanimator.cpp  windowanimator.h
kwin-effect/autotilehandler/: autotilehandler.cpp  (+5 more)
phosphorconfig/: CMakeLists.txt  PhosphorConfigConfig.cmake.in
phosphorlayer/: CMakeLists.txt  PhosphorLayerConfig.cmake.in
phosphorrendering/: CMakeLists.txt  PhosphorRenderingConfig.cmake.in
phosphorshell/: CMakeLists.txt
src/: CMakeLists.txt  p_i18n.h  p_qml_i18n.cpp  p_qml_i18n.h  phosphor_i18n.h  phosphor_qml_i18n.cpp  phosphor_qml_i18n.h  pz_i18n.h  pz_qml_i18n.cpp
tests/: CMakeLists.txt
tools/: CMakeLists.txt
(+4589 files in other folders)
